# PROGRAMACION-FINANZAS

./: README.md  pyproject.toml  pytest.ini  setup.py
src/felo_finance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/felo_finance/risk/data/: __init__.py  prices.py  types.py
src/felo_finance/risk/data/providers/: __init__.py  base.py  yahoo.py
tests/: test_get_prices_provider.py  test_yahoo_integration.py
